<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/file_container">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="center_vertical">
        
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/img_fileIcon"
            android:padding="5dp"
            android:src="@drawable/ic_folder"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/dir_filename"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:text="@string/Filename"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:textAlignment="gravity"
                android:gravity="center_vertical"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/dir_filesize"
                    android:text="@string/Filesize"
                    android:textSize="10sp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/dir_date"
                    android:text="@string/Filedate"
                    android:textSize="10sp"
                    android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>